--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>300nm.io CSS framework</title>
   </head>
   <body>
-    Near ultraviolet CSS framework. You can install it at [the npm
-    registry](https://www.npmjs.com/package/300nm)
+    Near ultraviolet CSS framework. You can install it at <a href="https://www.npmjs.com/package/300nm"></a>the npm registry</a>
   </body>
 </html>
